// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codeblock-props > formats case #YamlProps 1`] = `
"::with-frontmatter-yaml
\`\`\`yaml [props]
array:
  - item
  - itemKey: value
key: value
\`\`\`
::
"
`;

exports[`codeblock-props > formats case #nested-component-yamlProps 1`] = `
"::with-frontmatter-and-nested-component-yaml
\`\`\`yaml [props]
array:
  - item
  - itemKey: value
key: value
\`\`\`
Default slot
#secondary-slot
Secondary slot value
:::hello
\`\`\`yaml [props]
key: value
\`\`\`
:::
::
"
`;

exports[`codeblock-props > formats case #notYamlProps 1`] = `
"::with-frontmatter-yaml
\`\`\`yaml
key: value
array:
  - item
  - itemKey: value
\`\`\`
::
"
`;

exports[`codeblock-props > formats case #notYamlProps2 1`] = `
"::with-frontmatter-yaml
\`\`\`yaml[props]
key: value
array:
  - item
  - itemKey: value
\`\`\`
::
"
`;

exports[`codeblock-props > formats case #notYamlProps3 1`] = `
"::with-frontmatter-yaml
\`\`\`yaml [yaml]
key: value
array:
  - item
  - itemKey: value
\`\`\`
::
"
`;

exports[`codeblock-props > formats case #shouldConvertYamlProps 1`] = `
"::with-frontmatter-yaml
---
array:
  - item
  - itemKey: value
key: value
---
::
"
`;

exports[`codeblock-props > formats case #yamlProps1 1`] = `
"::with-frontmatter-yaml1
\`\`\`yaml [props]
key: value
key2:
  subkey: value
  subkey2: value
array:
  - item
  - itemKey: value
\`\`\`
::
"
`;
